# nxp_image_viewer

./: CMakeLists.txt  README.md
src/: CMakeLists.txt  imagelistmodel.cpp  imagelistmodel.h  imagelistview.cpp  imagelistview.h  imageprocessor.cpp  imageprocessor.h  imageviewer.cpp  imageviewer.h  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  res.qrc
src/interface/: template.c
